# K-law-local

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
src/: App.jsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: ChatSection.jsx  Citator.jsx  DiffViewer.jsx  LawSearch.jsx  SettingsModal.jsx  Sidebar.jsx
src/lib/: lawApi.js  llmApi.js
