[package]
name = "korean-law-assistant"
version = "1.0.0"
description = "대한민국 법률/판례 AI 어시스턴트 데스크톱 프로그램"
authors = ["Antigravity"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = [ "http-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# by default tauri-codegen makes this shrink to the tauri core
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
